<resources>
    <string name="app_name">ColorPalettes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_amber">Amber</string>
    <string name="title_activity_blue">Blue</string>
    <string name="title_activity_blue_gray">BlueGray</string>
    <string name="title_activity_brown">Brown</string>
    <string name="title_activity_cyan">Cyan</string>
    <string name="title_activity_deep_orange">DeepOrange</string>
    <string name="title_activity_deep_purple">DeepPurple</string>
    <string name="title_activity_green">Green</string>
    <string name="title_activity_gray">Gray</string>
    <string name="title_activity_indigo">Indigo</string>
    <string name="title_activity_light_blue">LightBlue</string>
    <string name="title_activity_light_green">LightGreen</string>
    <string name="title_activity_lime">Lime</string>
    <string name="title_activity_orange">Orange</string>
    <string name="title_activity_pink">Pink</string>
    <string name="title_activity_purple">Purple</string>
    <string name="title_activity_red">Red</string>
    <string name="title_activity_teal">Teal</string>
    <string name="title_activity_yellow">Yellow</string>

    <string name="tvPaleta">Escolha sua paleta de cores</string>
    <string name="title_activity_tela_sobre">TelaSobre</string>

    <!-- Sobre -->
    <string name="so_nomeapp">Nome do App: Paleta de Cores Material Design</string>
    <string name="so_versao">Versão: 1.0</string>
    <string name="so_desenvolvedor">Desenvolvedor Principal:\nCluster - Thiago Cury</string>
    <string name="so_desenvolvedor_auxiliar">Desenvolvedores Parceiros:\nVinicius Machado</string>
    <string name="so_data">Ano: 2015</string>
    <string name="so_site">Site: www.thiagocury.eti.br</string>
    <string name="so_contato">Contato: contato@thiagocury.eti.br</string>

    <!-- Menu -->
    <string name="menu_tela_abertura">Tela Inicial</string>
    <string name="menu_tela_amber">Amber</string>
    <string name="menu_tela_blue">Blue</string>
    <string name="menu_tela_blue_gray">Blue Gray</string>
    <string name="menu_tela_brown">Brown</string>
    <string name="menu_tela_cyan">Cyan</string>
    <string name="menu_tela_Cyan">Cyan</string>
    <string name="menu_tela_deep_orange">Deep Orange</string>
    <string name="menu_tela_deep_purple">Deep Purple</string>
    <string name="menu_tela_gray">Gray</string>
    <string name="menu_tela_green">Green</string>
    <string name="menu_tela_indigo">Indigo</string>
    <string name="menu_tela_light_blue">Light Blue</string>
    <string name="menu_tela_light_green">Light Green</string>
    <string name="menu_tela_lime">Lime</string>
    <string name="menu_tela_orange">Orange</string>
    <string name="menu_tela_pink">Pink</string>
    <string name="menu_tela_purple">Purple</string>
    <string name="menu_tela_red">Red</string>
    <string name="menu_tela_teal">Teal</string>
    <string name="menu_tela_yellow">Yellow</string>
    <string name="menu_tela_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>
</resources>
