<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_tela_abertura" tools:context=".TelaAbertura">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:columnCount="1" >

        <Button
            android:id="@+id/btnRed"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:background="@color/red500"
            android:text="@string/title_activity_red"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnPink"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:background="@color/pink500"
            android:text="@string/title_activity_pink"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnPurple"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:background="@color/purple500"
            android:text="@string/title_activity_purple"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDeepPurple"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/title_activity_deep_purple"
            android:background="@color/deepPurple500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnIndigo"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="center|top"
            android:layout_row="1"
            android:text="@string/title_activity_indigo"
            android:background="@color/indigo500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="1"
            android:text="@string/title_activity_blue"
            android:background="@color/blue500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLightBlue"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/title_activity_light_blue"
            android:background="@color/lightBlue500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCyan"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="center|top"
            android:layout_row="2"
            android:text="@string/title_activity_cyan"
            android:background="@color/cyan500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnTeal"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="2"
            android:text="@string/title_activity_teal"
            android:background="@color/teal500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/title_activity_green"
            android:background="@color/green500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLightGreen"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="center|top"
            android:layout_row="3"
            android:text="@string/title_activity_light_green"
            android:background="@color/lightGreen500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLime"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="3"
            android:text="@string/title_activity_lime"
            android:background="@color/lime500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnYellow"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:text="@string/title_activity_yellow"
            android:background="@color/yellow500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAmber"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="center|top"
            android:layout_row="4"
            android:text="@string/title_activity_amber"
            android:background="@color/amber500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnOrange"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="4"
            android:text="@string/title_activity_orange"
            android:background="@color/orange500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDeepOrange"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="5"
            android:text="@string/title_activity_deep_orange"
            android:background="@color/deepOrange500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnBrown"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="center|top"
            android:layout_row="5"
            android:text="@string/title_activity_brown"
            android:background="@color/brown500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGrey"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="5"
            android:text="@string/title_activity_gray"
            android:background="@color/gray500"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnBlueGrey"
            android:layout_width="@dimen/larg_botoes"
            android:layout_column="0"
            android:layout_gravity="center|top"
            android:layout_row="6"
            android:text="@string/title_activity_blue_gray"
            android:background="@color/blueGray500"
            android:textColor="@color/white" />

    </GridLayout>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tvPaleta" />

</RelativeLayout>
