<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_tela_sobre"
    tools:context="thiagocury.eti.br.colorpalettes.TelaSobre">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_launcher"
            android:layout_gravity="center_horizontal" />

        <TextView android:text="@string/so_nomeapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/texto"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/so_versao"
            android:id="@+id/textView3"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/texto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/so_data"
            android:id="@+id/textView5"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/texto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/so_desenvolvedor"
            android:id="@+id/textView4"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/texto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/so_site"
            android:id="@+id/textView6"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/texto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/so_contato"
            android:id="@+id/textView7"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/texto" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/logo_colorido"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/so_desenvolvedor_auxiliar"
            android:id="@+id/textView10"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/texto" />

    </LinearLayout>

</RelativeLayout>
